Implementation - Database, Implementation- Architecture

--- a/implementation.tex
+++ b/implementation.tex
@@ -11,25 +11,45 @@
 	    \caption{ Σχηματικό διάγραμμα του συστήματος. }
 	    \label{fig:architect_schema}
 	\end{figure}
+	Τα επίπεδα που χρησιμοποιούνται στο σχήμα είναι τα εξής:
+	\begin{itemize}
+	\item Επίπεδο Βάσης Δεδομένων (Database layer). Στο επίπεδο αυτό τηρείται το σύνολο των επιχειρησιακών δεδομένων αλλά και των βοηθητικών αρχείων για την εύρυθμη λειτουργία των εφαρμογών του συστήματος.
+	
+	\item  Επίπεδο Επιχειρησιακής Λογικής (Bussiness logic layer). Στο επίπεδο αυτό διαμορφώνεται η επιχειρησιακή λογική ώστε να παραμετροποιείται το σύστημα με βάση τις ανάγκες λειτουργίας του φορέα.
+	
+	\item Επίπεδο Παρουσίασης ( Presentation layer). Αφορά στη διαπροσωπεία (User Interface) και στον τρόπο παρουσίασης των δεδομένων σύμφωνα με το ρόλο του κάθε χρήστη. Το προτεινόμενο σύστημα βασίζεται στις τεχνολογίες WEB και στις τεχνολογίες παρουσίασης του Android.
+	
+	\end{itemize}
 
 \section{Βάση δεδομένων}
 	\subsection{Σχήμα Βάσης}
-	- βαζουμε το "σχημα"
-	\subsection{Ανάλυση}
-	-επεξηγουμε τα πεδια οπως ο Αλεξανδρος
-
+	
+	Στην ενότητα αυτή παρουσιάζεται το σχεσιακό διάγραμμα της βάσης NoSQL για το προτεινόμενο σύστημα ενώ παράλληλα αποτυπώνονται συνοπτικά οι προτεινόμενες δομές δεδομένων που υλοποιούν το προτεινόμενο σχήμα δεδομένων. Στο σχήμα \ref{fig:database_diag} απεικονίζεται η βάση δεδομένων.
+	
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{Class_Diagram.png}
+	    \caption{Σχεσιακό διάγραμμα της βάσης του συστήματος.}
+	    \label{fig:database_diag}
+	\end{figure}
+	
+		Κεντρικοί πίνακες είναι ο πίνακας Donor και ο πίνακας Institution. Ο πίνακας Donor περιέχει τα στοιχεία του εθελοντή αιμοδότη τα οποία είναι τα εξής: ΑΜΚΑ,όνομα, επώνυμο, photopath (για αποθήκευση φωτογραφίας), ημερομηνία γέννησης, φύλο, userid, username, password, e-mai, ημερομηνία δημιουργίας λογαριασμού. Ο πίνακας Institution περιέχει τα στοιχεία του κέντρου αιμοδοσίας, τα οποία είναι: userID,username, password, email, ημερομηνία δημιουργίας λογαριασμού, logopath, λοιπά στοιχεία του ινστιτούτου. Υπάρχει επιπλέον ο πίνακας Address ο οποίος περιέχει τα στοιχεία: πόλη, διεύθυνση, νούμερο και ταχυδρομικός κώδικας και ενώνεται με σχέση 1-1 με το κέντρο αιμοδοσίας και με σχέση 1-1 με τον εθελοντή αιμοδότη και ο πίνακας BloodType  ο οποίος αποθηκεύει ένα id για τον τύπο του αίματος, την ομάδα αίματος και το rhesus και συνδέεται με σχέση 1:1 με τον εθελοντή αιμοδότη.
+	
+		Ο πίνακας Donation περιεχέι στοιχεία για τις πραγματοποιηθείσες αιμοδοσίες, όπως: donationid, το id του κέντρου αιμοδοσίας στο οποίο έλαβαν χώρα, το id του εθελοντή και την ημερομηνία κατά την οποία πραγματοποιήθηκε η αιμοδοσία. Ο πίνακας Donation συνδέεται με σχέση N:1 με τον πίνακα Donor, καθώς ένας Donor μπορεί να έχει πραγματοποιήσει N αιμοδοσίες. Ο πίνακας DonationRequest περιέχει τα αιτήματα αιμοδοσίας που στέλνονται στους χρήστες, με τα εξής στοιχεία: το id του εθελοντή, το id του κέντρου αιμοδοσίας, το id του γεγονότος αιμοδοσίας στο οποίο αναφέρεται  και τέλος ένα πεδίο που λέγεται κατάσταση και περιγράφει την κατάσταση του αιτήματος (σε αναμονή, εγκεκριμένο, απορριφθέν ). Ο πίνακας DonationRequest ενώνεται με σχέση Ν:Ν με τους εθελοντές, καθώς πολλά αιτήματα αιμοδοσίας αντιστοιχούν σε πολλούς αιμοδότες.
+	
+		Στον πίνακα BloodProduct αποθηκεύονται στοιχεία για τα παράγωγα αίματος που προκύπτουν από κάποια αιμοδοσία, ενώ στον πίνακα Patient αποθηκεύονται στοιχεία για τον ασθενή στον οποίο καταλήγει το αίμα, και συσχετίζεται με σχέση 1-1 με τον πίνακα BloodInventory. Ο πίνακας BloodInventory αντιστοιχεί σε κάθε σακούλα αίματος που έχει περάσει εργαστηριακούς ελέγχους και έχει εγκριθεί και περιέχει στοιχεία: id του αίματος, id της αιμοδοσίας από την οποία προήλθε, το id του κέντρου αιμοδοτών, το id του αντικειμένου, ημερομηνία λήξης του αίματος. Τέλος, ο πίνακας badges περιέχει τις δέκα διαφορετικές κατηγορίες εμβλημάτων που μπορεί να κερδίσει ένας εθελοντής αιμοδότης και συνδέεται με σχέση 1:1 με τον εθελοντή αιμοδότη.
 
 \section{Web App}
 	\subsection{NodeJs - Server Establishment}
 	
-	Όπως αναφέρθηκε και στην ενότητα (...) χρησιμοποιήσαμε την πλατφόρμα NodeJs για να αναπτύξουμε την εφαρμογή μας. Για να δουλέψουμε πάνω στο NodeJS χρησιμοποιούμε το το Express framework, εγκαθιστώντας το πακέτο express από τον Node Package Manager (NPM) και συνέχεια ενσωματώνουμε το πακέτο express. 
+	Όπως αναφέρθηκε και στην ενότητα \ref{ssec:node} χρησιμοποιήσαμε την πλατφόρμα NodeJs για να αναπτύξουμε την εφαρμογή μας. Για να δουλέψουμε πάνω στο NodeJS χρησιμοποιούμε το το Express framework, εγκαθιστώντας το πακέτο Express από τον Node Package Manager (NPM) και συνέχεια ενσωματώνουμε το πακέτο Express. 
 	
 		\begin{lstlisting}[language=Javascript]	
 	  		var express = require('express');
 		\end{lstlisting}
 		
 		
-	Αφού έχουμε εξάγει και ενσωματώσει το πακέτο express δημιουργούμε ένα νέο express αντικείμενο.	
+	Αφού έχουμε εξάγει και ενσωματώσει το πακέτο Express δημιουργούμε ένα νέο Express αντικείμενο.	
 		
 		
 		\begin{lstlisting}[language=Javascript]	
@@ -47,7 +67,7 @@
 		\subsection{Routing}
 	
 		Η δρομολόγηση αναφέρεται στον ορισμό των τελικών σημείων (URIs) σε μια εφαρμογή και πώς αυτή ανταποκρίνεται στα αιτήματα του πελάτη. Μια διαδρομή είναι ένας συνδυασμός ενός URI, μια μέθοδος αίτησης HTTP (GET, POST, κ.π.λ.), και έναν ή περισσότερους χειριστές για αυτό το τελικό σημείο. 
-		Στην υλοποίηση μας χρησιμοποιήσαμε ένα ξεχωριστό αρχείο για δρομολόγηση (routing) στο οποίο "ενώνεται" μία middleware συνάρτηση με κάθε μονοπάτι που χρησιμοποιεί η εφαρμογή μας. Δημιουργήσαμε ένα αντικείμενο Router που παρέχει το express framework, το οποίο εκτελεί μόνο middleware και routing συναρτήσεις. Στο αρχείο αυτό γράψαμε τον απαραίτητο κώδικα για τις δρομολογήσεις. Ακολουθεί παράδειγμα από τον κώδικα δρομολόγησης.
+		Στην υλοποίηση μας χρησιμοποιήσαμε ένα ξεχωριστό αρχείο για δρομολόγηση (routing) στο οποίο "ενώνεται" μία middleware συνάρτηση με κάθε μονοπάτι που χρησιμοποιεί η εφαρμογή μας. Δημιουργήσαμε ένα αντικείμενο Router που παρέχει το Express framework, το οποίο εκτελεί μόνο middleware και routing συναρτήσεις. Στο αρχείο αυτό γράψαμε τον απαραίτητο κώδικα για τις δρομολογήσεις. Ακολουθεί παράδειγμα από τον κώδικα δρομολόγησης.
 
 		\begin{lstlisting}[language=Javascript]			
 		
@@ -157,7 +177,7 @@
 	
 		Για τις ανάγκες λειτουργίας του συστήματος, μελετήθηκαν προσεκτικά και αξιολογήθηκαν οι αναγκαίες βασικές καρτέλες και τα μενού τα οποία κατ 'ελάχιστον θα πρέπει να διαθέτει το σύστημα ώστε να καλύπτει τις ανάγκες λειτουργίας του σε φορείς παροχής υπηρεσιών υγείας. Το σύστημα λοιπόν προτείνεται να απαρτίζεται από τις παρακάτω βασικές καρτέλες και μενού:
 
-		Στην συνέχεια παρουσιάζονται ενδεικτικά οι βασικές οθόνες λειτουργίας που διαθέτει το σύστημα μας για να καλύπτει τις λειτουργικές απαιτήσεις που αναφέρθηκαν στην ενότητα .... . Παρακάτω θα μελετήσουμε κάποιες ενδεικτικές οθόνες καθώς και τις λειτουργικότητες που παρέχουν, της διαδικτυακής εφαρμογής του υπολογιστικού νέφους από την πλευρά των εγκεκριμένων χρηστών/διαχειριστών των νοσοκομείων - κέντρων αιμοδοσίας. 
+		Στην συνέχεια παρουσιάζονται ενδεικτικά οι βασικές οθόνες λειτουργίας που διαθέτει το σύστημα μας για να καλύπτει τις λειτουργικές απαιτήσεις που αναφέρθηκαν στην ενότητα \ref{sec:Functional_Requirements}. Παρακάτω θα μελετήσουμε κάποιες ενδεικτικές οθόνες καθώς και τις λειτουργικότητες που παρέχουν, της διαδικτυακής εφαρμογής του υπολογιστικού νέφους από την πλευρά των εγκεκριμένων χρηστών/διαχειριστών των νοσοκομείων - κέντρων αιμοδοσίας. 
 	
 		\subsubsection{Register}
 		
