--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -1,7 +1,7 @@
 \graphicspath{ {Figures/system_analysis/} }
 
 \chapter{Ανάλυση και σχεδιασμός του συστήματος LifeDonor}\label{ch:Analysis of LifeDonor}
-\section{Λειτουργικές απαιτήσεις}
+\section{Λειτουργικές απαιτήσεις}\label{sec:Functional Requirements}
 
 	Οι απαιτήσεις ενός συστήματος αποτελούν τη βάση των συστημάτων λογισμικού. Ουσιαστικά, είναι η περιγραφή των υπηρεσιών που πρέπει να παρέχει ένα σύστημα λογισμικού και οι περιορισμοί υπό τους οποίους πρέπει αυτές να λειτουργούν. Διακρίνονται σε δύο βασικές κατηγορίες τις λειτουργικές απαιτήσεις (functional requirements) και τις μη λειτουργικές απαιτήσεις(non functional requirements). 
 	
