--- a/thesis.tex
+++ b/thesis.tex
@@ -85,8 +85,8 @@
 
 \frontmatter
 
-\title{Σχεδίαση και Υλοποίηση συστήματος εθελοντικής αιμοδοσίας στο υπολογιστικό νέφος}
-\author{Φωτόπουλος Ηλίας\\Ρεβέκκα Παλαιολόγου}
+\title{Ολοκληρωμένο σύστημα διαχείρισης εθελοντικής αιμοδοσίας στο υπολογιστικό νέφος}
+\author{Ρεβέκκα Παλαιολόγου\\Φωτόπουλος Ηλίας}
 \date{Σεπτέμβριος 2015}
 \datedefense{08}{10}{2015}
 
@@ -95,12 +95,12 @@
 
 \committeeone{Διονύσιος-Δημήτριος Κουτσούρης}
 \committeeonepos{Καθηγητής Ε.Μ.Π.}
-\committeetwo{Πέτρος X. Παπαδόπουλος}
-\committeetwopos{Επίκ. Καθηγητής Ε.Μ.Π.}
-\committeethree{Γεώργιος X. Νικολάου}
-\committeethreepos{Καθηγητής Ε.Κ.Π.Α.}
+\committeetwo{Παναγιώτης Τσανάκας}
+\committeetwopos{Καθηγητής Ε.Μ.Π.}
+\committeethree{Κωνσταντίνα Νικήτα}
+\committeethreepos{Καθηγήτρια Ε.Μ.Π.}
 
-\TRnumber{CSD-SW-TR-42-14}  % number-year, ask nickie for the number
+
 \department{Τομέας Συστημάτων Μετάδοσης Πληροφορίας και Τεχνολογίας Υλικών}
 
 \maketitle
