--- a/references.bib
+++ b/references.bib
@@ -1258,6 +1258,16 @@ Timothy Grance},
   Timestamp                = {2015.10.08}
 }
 
+@Article{number_d,
+  Title                    = {Analysis of blood donor return behaviour using survival regression methods.},
+  Author                   = {James RC, Matthews DE},
+  Journal                  = {Transfusion Med},
+  Year                     = {1996},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.23}
+}
+
 @Article{Kabachinski2011,
   Title                    = {What's the Forecast for Cloud Computing in Healthcare?},
   Author                   = {Kabachinski, Jeff},
