Acknowledgements minor name change

--- a/abstract.tex
+++ b/abstract.tex
@@ -19,7 +19,7 @@
 
 Επίσης θα θέλαμε να ευχαριστήσουμε τον κ. Ιωάννη Κουρή για τη συνεχή και αποτελεσματική βοήθειά του, καθώς και τη συνολική υποστήριξή του καθ΄ όλη τη διάρκεια εκπόνησης της διπλωματικής μας εργασίας.
 
-Τέλος, οφείλουμε ένα μεγάλο ευχαριστώ στις οικογένειές μας, στους γονείς μας Βασίλη-Κέλλυ και Κώστα-Βασιλική αντίστοιχα, καθώς και τους φίλους μας, για την αμέριστη συμπαράσταση, υποστήριξή και συνολική τους βοήθεια σε όλα τα επίπεδα.
+Τέλος, οφείλουμε ένα μεγάλο ευχαριστώ στις οικογένειές μας, στους γονείς μας Βασίλη-Κέλλυ και Κώσταντίνο-Βασιλική αντίστοιχα, καθώς και τους φίλους μας, για την αμέριστη συμπαράσταση, υποστήριξή και συνολική τους βοήθεια σε όλα τα επίπεδα.
 
 
 \end{acknowledgementsgr}
