Add a sample quote

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,35 @@
+\clearpage
+
+\thispagestyle{empty}
+\null\vfill
+
+\settowidth\longest{\huge\itshape just as his inclination leads him;}
+\begin{center}
+	\parbox{\longest}{%
+	  \raggedright{\huge\itshape%
+	   A man ought to read \\ 
+	  just as his inclination leads him; \\
+	  for what he reads as a task \\ 
+	  will do him little good.\par\bigskip
+	  }   
+	  \raggedleft\Large\MakeUppercase{Samuel Johnson}\par%
+	}
+\end{center}
+\vfill\vfill
+
+\clearpage
+
+
+\begin{acknowledgementsgr}
+Με τη λήξη αυτού του ακαδημαϊκού κύκλου, θέλουμε να ευχαριστήσουμε όλους όσοι στάθηκαν στο πλευρό μας και μας στήριξαν κατά τη διάρκεια της εκπόνησης της διπλωματικής μας εργασίας αλλά και καθ’ όλη τη διάρκεια των σπουδών μας .
+
+Θα θέλαμε αρχικά να ευχαριστήσουμε τον επιβλέποντα καθηγητή, κ. Δημήτριο Κουτσούρη, που μας έδωσε τη δυνατότητα να ασχοληθούμε με ένα τόσο ενδιαφέρον και σημαντικό θέμα.
+
+Επίσης θα θέλαμε να ευχαριστήσουμε τον κ. Ιωάννη Κουρή για τη συνεχή και αποτελεσματική βοήθειά του, καθώς και τη συνολική υποστήριξή του καθ΄ όλη τη διάρκεια εκπόνησης της διπλωματικής μας εργασίας.
+
+Τέλος, οφείλουμε ένα μεγάλο ευχαριστώ στις οικογένειές μας, στους γονείς μας Βασίλη-Κέλλυ και Κώσταντίνο-Βασιλική αντίστοιχα, καθώς και τους φίλους μας, για την αμέριστη συμπαράσταση, υποστήριξή και συνολική τους βοήθεια σε όλα τα επίπεδα.
+\end{acknowledgementsgr}
+
 \begin{abstractgr}
 	Τα τελευταία χρόνια έχει παρατηρηθεί μια ραγδαία αύξηση στις ανάγκες για αίμα και για τα προϊόντα του αίματος γενικότερα, η οποία αναμένεται να συνεχίσει να αυξάνεται στα επόμενα χρόνια. Για να καλυφθούν οι όλο και μεγαλύτερες ανάγκες είναι μονόδρομος η κινητοποίηση, η ευαισθητοποίηση και η καλύτερη οργάνωση των εθελοντών έτσι ώστε να επιτευχθεί μεγαλύτερος αριθμός εθελοντικών αιμοδοσιών και κατ' επέκταση αυτάρκεια. Η παρούσα διπλωματική αφορά τον σχεδιασμό και υλοποίηση ενός ολοκληρωμένου συστήματος αιμοδοσίας\symbol{"0387} το οποίο έχει ως στόχο να βοηθήσει σημαντικά στην εξεύρεση νέων εθελοντών, αλλά και ταυτόχρονα να διατηρήσει τους υπάρχοντες αυξάνοντας την συστηματικότητα τους και τον αριθμό των δωρεών που πραγματοποιούν. Μεγάλη βαρύτητα δόθηκε στον σχεδιασμό της αρχιτεκτονικής του συστήματος και διασύνδεσης του με τα διάφορα υποσύστημα τα του, αξιοποιώντας τις κρατούσες
 τεχνολογικές προσεγγίσεις περί ανάπτυξης συστημάτων πολλαπλών επιπέδων. Επίσης έχει γίνει εκτενής μελέτη και χρήση της τεχνολογίας υπολογιστικού νέφους λόγω της μεγάλης ελαστικότητας, της επεκτασιμότητας και της οικονομίας κλίμακας που προσφέρει.  Συγκεκριμένα το σύστημα αποτελείται από τα παρακάτω διασυνδεδεμένα υποσυστήματα: i) Εφαρμογή έξυπνου κινητού τηλεφώνου (smartphone) προοριζόμενη για χρήση από τους εθελοντές αιμοδότες ii) Διαδικτυακή εφαρμογή (cloud portal) για διαχείριση των αιτημάτων αιμοδοσίας από τα κέντρα αιμοδοσίας  iιι) Υποσύστημα ελέγχου του ιατρικού ιστορικού  του υποψήφιου εθελοντή αιμοδότη μέσω ανταλλαγής δεδομένων με χρήση πρωτοκόλλων HL7 και CDA Documents και απόφανσης της καταλληλότητας του ή μη. Για το υποσύστημα ανταλλαγής δεδομένων μελετήθηκαν τα ζητήματα διαλειτουργικότητας με τρίτα συστήματα και προτάθηκαν μηχανισμοί διαλειτουργικότητας που εξυπηρετούν τις ανάγκες ανταλλαγής δεδομένων μεταξύ συστημάτων.
@@ -11,15 +43,3 @@
 	\end{keywordsen}
 \end{abstracten}
 
-\begin{acknowledgementsgr}
-
-Με τη λήξη αυτού του ακαδημαϊκού κύκλου, θέλουμε να ευχαριστήσουμε όλους όσοι στάθηκαν στο πλευρό μας και μας στήριξαν κατά τη διάρκεια της εκπόνησης της διπλωματικής μας εργασίας αλλά και καθ’ όλη τη διάρκεια των σπουδών μας .
-
-Θα θέλαμε αρχικά να ευχαριστήσουμε τον επιβλέποντα καθηγητή, κ. Δημήτριο Κουτσούρη, που μας έδωσε τη δυνατότητα να ασχοληθούμε με ένα τόσο ενδιαφέρον και σημαντικό θέμα.
-
-Επίσης θα θέλαμε να ευχαριστήσουμε τον κ. Ιωάννη Κουρή για τη συνεχή και αποτελεσματική βοήθειά του, καθώς και τη συνολική υποστήριξή του καθ΄ όλη τη διάρκεια εκπόνησης της διπλωματικής μας εργασίας.
-
-Τέλος, οφείλουμε ένα μεγάλο ευχαριστώ στις οικογένειές μας, στους γονείς μας Βασίλη-Κέλλυ και Κώσταντίνο-Βασιλική αντίστοιχα, καθώς και τους φίλους μας, για την αμέριστη συμπαράσταση, υποστήριξή και συνολική τους βοήθεια σε όλα τα επίπεδα.
-
-
-\end{acknowledgementsgr}
