--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,9 @@
 \restylefloat{table}
 \usepackage{xcolor,colortbl}
 \renewcommand{\baselinestretch}{1.5}
+\usepackage{lmodern}
+
+\newlength\longest
 
 
 %----------------------------------------------------------------------------------------
