--- a/thesis.tex
+++ b/thesis.tex
@@ -145,8 +145,7 @@
 \backmatter
 \appendix
 
-\includepdf[scale=0.5, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf}\label{Donor Questionnaire}
-
+\include{donor_questionnaire}
 \include{blood_centers_appendix} 
 
 
